<resources>
    <string name="app_name">DemoOverLay</string>
    <string name="menu_home_setting">Setting</string>
    <string name="menu_home_store">Store</string>
    <string name="menu_home_gallery">Gallery</string>
    <string name="menu_home_camera">Camera</string>
    <string name="menu_edit_text">Text</string>
    <string name="menu_edit_overlay">Overlay</string>
    <string name="menu_edit_stickers">Stickers</string>
    <string name="menu_edit_filter">Filter</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="percent_max_seekbar">100%</string>
    <string name="add">Add</string>
    <string name="color">Color</string>
    <string name="transparency">Transparency</string>
    <string name="text_size">Text size</string>
    <string name="double_click_input_text">double_click_input_text</string>
    <string name="crop">Crop</string>
    <string name="save_image">Save Image</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="filter">Filter</string>
    <string name="sticker">Sticker</string>
    <string name="addText">Add Text</string>
    <string name="text_stroke">Stroke</string>
    <string name="text_font">Font</string>
    <string name="text_shadow">Shadow</string>
    <string name="double_click">DOUBLE_CLICK</string>
    <string name="menu_edit_adjust">Adjust</string>
    <string name="brightness">Brightness</string>
    <string name="contrast">Contrast</string>
    <string name="blur">Blur</string>

    <!--    list color-->
    <string-array name="color">
        <item name="colorBlack">#000080</item>
        <item name="colorRed">#F30505</item>
        <item name="colorOrange">#EE711C</item>
        <item name="colorYellow">#EBD839</item>
        <item name="coloryx">#BEF006</item>
        <item name="colorGreen">#4DEC08</item>
        <item name="colorxd">#0FF0BC</item>
    </string-array>


</resources>