<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/app_name_text">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ctl_brightness"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:padding="@dimen/size_16">

            <ImageView
                android:id="@+id/img_brightness"
                android:layout_width="@dimen/size_32"
                android:layout_height="@dimen/size_32"
                android:src="@drawable/ic_brightness"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tv_brightness"
                android:padding="@dimen/size_4"/>

            <TextView
                android:id="@+id/tv_brightness"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brightness"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/img_brightness"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ctl_contrast"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/ctl_brightness"
            app:layout_constraintBottom_toBottomOf="parent"
            android:padding="@dimen/size_16">

            <ImageView
                android:id="@+id/img_add"
                android:layout_width="@dimen/size_32"
                android:layout_height="@dimen/size_32"
                android:src="@drawable/ic_contrast"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tv_add"
                android:padding="@dimen/size_4"/>

            <TextView
                android:id="@+id/tv_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contrast"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/img_add"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ctl_blur"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/ctl_contrast"
            app:layout_constraintBottom_toBottomOf="parent"
            android:padding="@dimen/size_16">

            <ImageView
                android:id="@+id/img_blur"
                android:layout_width="@dimen/size_32"
                android:layout_height="@dimen/size_32"
                android:src="@drawable/ic_blur"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tv_blur"
                android:padding="@dimen/size_4"/>

            <TextView
                android:id="@+id/tv_blur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blur"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/img_blur"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
